kube/probe.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-exec
spec:
  containers:
    - name: liveness
      image: k8s.gcr.io/busybox
      args:
        - /bin/sh
        - -c
        - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
      livenessProbe:
        exec:
          command:
            - cat
            - /tmp/healthy
        initialDelaySeconds: 3
        failureThreshold: 1
        periodSeconds: 5
# htpp check
#      livenessProbe:
#        httpGet:
#          path: /healthz
#          port: 8080
#          httpHeaders:
#            - name: X-Custom-Header
#              value: Awesome
#        initialDelaySeconds: 3
#        periodSeconds: 3
# tcp check
#      livenessProbe:
#        tcpSocket:
#          port: 8080
#        initialDelaySeconds: 15
#        periodSeconds: 20
# readyness probes
#      readinessProbe:
#        exec:
#          command:
#            - cat
#            - /tmp/healthy
#        initialDelaySeconds: 5
#        periodSeconds: 5
