kube/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
#      imagePullSecrets:
#        - name: docker-registry-key
      containers:
        - name: api
#          image: yurikrupnik/simple-be
          image: yurikrupnik/api:latest
#          image: europe-west1-docker.pkg.dev/mussia14/images/api:latest
#          image: europe-west1-docker.pkg.dev/mussia14/images/simple-be:latest
#          volumeMounts:
#            - name: google-cloud-keys
#              mountPath: /var/secrets/google
#              readOnly: true
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    run: api-service
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3333
  selector:
    app: api


# colors in xd
# themes
