kube/mongo-express.yaml
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: mongodb-deployment
#  labels:
#    app: mongodb
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: mongodb
#  template:
#    metadata:
#      labels:
#        app: mongodb
#    spec:
#      containers:
#        - name: mongodb
#          image: mongo
#          imagePullPolicy: Always
#          ports:
#            - containerPort: 27017
#          env:
#            - name: MONGO_INITDB_ROOT_USERNAME
#              valueFrom:
#                secretKeyRef:
#                  name: mongodb-secret
#                  key: mongo-root-username
#            - name: MONGO_INITDB_ROOT_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: mongodb-secret
#                  key: mongo-root-password
#
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: mongodb-service
#  labels:
#    run: mongodb-service
#spec:
#  ports:
#    - port: 27017
#      protocol: TCP
#  selector:
#    app: mongodb


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  ports:
    - port: 8081
      protocol: TCP
  selector:
    app: mongo-express
  type: ClusterIP
