kube/users-grpc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-grpc
  labels:
    app: users-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-grpc
  template:
    metadata:
      labels:
        app: users-grpc
    spec:
#      imagePullSecrets:
#        - name: docker-registry-key
      containers:
        - name: api
          image: yurikrupnik/users-grpc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: users-grpc-service
  labels:
    run: users-grpc-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: users-grpc


# colors in xd
# themes
