kube/web-nest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webclient
  labels:
    app: webclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webclient
  template:
    metadata:
      labels:
        app: webclient
    spec:
      #      imagePullSecrets:
      #        - name: docker-registry-key
      containers:
        - name: api
          image: yurikrupnik/webclient:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webclient-service
  labels:
    run: webclient-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: webclient
