kube/ingress1.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: virtual-host-ingress
#  namespace: default
#spec:
#  rules:
#    - host: myapp.com
#      http:
#        paths:
#          - backend:
#              service:
#                name: webclient-service
#                port:
#                  number: 80
#            path: /
#            pathType: ImplementationSpecific
#    - host: green.example.com
#      http:
#        paths:
#          - backend:
#              service:
#                name: webserver-green-svc
#                port:
#                  number: 80
#            path: /
#            pathType: ImplementationSpecific

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1


spec:
  rules:
    - host: yurikrupni.com
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
#            pathType: ImplementationSpecific
          - path: /?(.*)
            backend:
              service:
                name: webclient-service
                port:
                  number: 80
            pathType: Prefix
#            pathType: ImplementationSpecific
